hphp/hack/test/typecheck/class_pointers/type_structure_classname.php.exp
ERROR: File "type_structure_classname.php", line 18, characters 3-5:
It is no longer allowed to use a `classname<Bar>` in this position. Please use a `class<Bar>` instead. (Typing[4482])
  File "type_structure_classname.php", line 8, characters 14-14:
  Definition is here
